# todos-ocaml

./: .gitignore  README.md  dune-project  package-lock.json  package.json  todos_ocaml.opam
.github/workflows/: ci.yml
app/: Entitlements.plist  dune  ios_app.ml  native_ui.ml  tauri_store.ml
lib/: dune  todo_app_state.ml  todo_app_state.mli  todo_core.ml  todo_datascript_sqlite_stubs.c  todo_presentation.ml  todo_presentation.mli  todo_runtime.ml  todo_ui.ml  todo_ui.mli
scripts/: dev-ios.sh  dev-mac.sh  prepare-tauri-build.sh
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  native_search.rs  native_search.swift  native_sidebar.rs  native_sidebar.swift
test/: dune  migration_smoke.sh  tauri_smoke.sh  test_todo_app_state.ml  test_todo_model.ml  test_todo_presentation.ml  test_todo_ui.ml
web/: README.md  base_ui_runtime.js  db_worker_client.js  dune  package-lock.json  package.json  sqlite_worker_runtime.js  tauri_runtime.js  todos_db_worker.ml  todos_web.ml  vite.config.js
web/src/: styles.css
