opam-version: "2.0"
synopsis: "Cross-platform todo app built with DataScript and Bonsai Native"
description: """
A cross-platform todo app whose shared OCaml state is stored in datascript and rendered with Bonsai Native or Melange React.
"""
maintainer: "Tienson Qin"
authors: ["Tienson Qin"]
license: "MIT"
depends: [
  "ocaml" {>= "5.4.1"}
  "dune" {>= "3.17"}
  "datascript_ocaml"
  "melange"
  "melange-transit"
  "bonsai_native"
  "bonsai_apple"
]
pin-depends: [
  ["datascript_ocaml.dev" "git+https://github.com/logseq/datascript-ocaml.git#cd80734773913f821484e0fc5d4a99391ad0122d"]
  ["bonsai_native.dev" "git+https://github.com/logseq/bonsai-native.git#e8b6e13db0fba9ebf49a35591204e14f3e3b32e6"]
  ["bonsai_apple.dev" "git+https://github.com/logseq/bonsai-native.git#e8b6e13db0fba9ebf49a35591204e14f3e3b32e6"]
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
