(executable
 (name ios_app)
 (modules native_ui ios_app)
 (enabled_if
  (or
   (= %{context_name} device.ios)
   (= %{context_name} simulator.ios)
   (= %{context_name} simulator-arm.ios)
   (= %{context_name} catalyst.ios)))
 (flags
  :standard
  -ccopt
  "-target"
  -ccopt
  "%{env:IOS_TARGET=arm64-apple-ios17.0-simulator}"
  -ccopt
  "-arch"
  -ccopt
  "%{env:IOS_ARCH=arm64}"
  -ccopt
  "-isysroot"
  -ccopt
  "%{env:IOS_SDKROOT=/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator26.0.sdk}"
  -ccopt
  "-miphoneos-version-min=17.0"
  -ccopt
  "-framework UIKit"
  -ccopt
  "-framework Security")
 (libraries
  todos_ocaml
  bonsai
  bonsai.driver
  core
  camlkit-base.CoreAnimation
  camlkit-base.CoreGraphics
  camlkit-base.Foundation
  camlkit-gui.UIKit)
 (preprocess
  (pps ppx_jane bonsai.ppx_bonsai)))

(subdir
 Todos.app
 (rule
 (alias default)
  (deps ../Info.plist ../Entitlements.plist ../ios_app.exe)
  (targets Info.plist Todos)
  (enabled_if
   (or
    (= %{context_name} device.ios)
    (= %{context_name} simulator.ios)
    (= %{context_name} simulator-arm.ios)
    (= %{context_name} catalyst.ios)))
  (action
   (progn
    (copy ../Info.plist Info.plist)
    (copy ../ios_app.exe Todos)
    (run
     codesign
     --force
     --sign
     %{env:CODESIGN_IDENTITY=20C6BAC6D27E2CC8D07385E763D2618774727C50}
     --entitlements
     ../Entitlements.plist
     --timestamp=none
     Todos)))))
