(executable
 (name tauri_store)
 (modules tauri_store)
 (libraries todos_ocaml))

(executable
 (name ios_app)
 (modules ios_app)
 (enabled_if
  (or
   (= %{context_name} device.ios)
   (= %{context_name} simulator.ios)
   (= %{context_name} simulator-arm.ios)
   (= %{context_name} catalyst.ios)))
 (flags
  :standard
  -ccopt
  "-target"
  -ccopt
  "%{env:IOS_TARGET=arm64-apple-ios17.0-simulator}"
  -ccopt
  "-arch"
  -ccopt
  "%{env:IOS_ARCH=arm64}"
  -ccopt
  "-isysroot"
  -ccopt
  "%{env:IOS_SDKROOT=/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator26.0.sdk}"
  -ccopt
  "-miphoneos-version-min=17.0")
 (extra_objects BonsaiNativeSwiftUI)
 (libraries todos_ocaml todos_ocaml.apple_ui bonsai_apple.swiftui))

(executable
 (name mac_app)
 (modules mac_app)
 (enabled_if
  (= %{context_name} simulator))
 (extra_objects BonsaiNativeSwiftUIMac)
 (link_flags
  (:standard
   -cclib
   -framework
   -cclib
   AppKit
   -cclib
   -framework
   -cclib
   SwiftUI))
 (libraries
  todos_ocaml
  todos_ocaml.apple_ui
  bonsai_apple.swiftui
  threads.posix))

(rule
 (target BonsaiNativeSwiftUIMac.o)
 (deps %{lib:bonsai_apple:swiftui/BonsaiNativeSwiftUIMac.swift})
 (enabled_if
  (= %{context_name} simulator))
 (action
  (run
   xcrun
   swiftc
   -target
   arm64-apple-macosx14.0
   -sdk
   /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk
   -parse-as-library
   -emit-object
   %{deps}
   -o
   %{target})))

(rule
 (target BonsaiNativeSwiftUI.o)
 (deps %{lib:bonsai_apple:swiftui/BonsaiNativeSwiftUI.swift})
 (enabled_if
  (or
   (= %{context_name} device.ios)
   (= %{context_name} simulator.ios)
   (= %{context_name} simulator-arm.ios)
   (= %{context_name} catalyst.ios)))
 (action
  (run
   xcrun
   swiftc
   -target
   %{env:IOS_TARGET=arm64-apple-ios17.0-simulator}
   -sdk
   %{env:IOS_SDKROOT=/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator26.0.sdk}
   -parse-as-library
   -emit-object
   %{deps}
   -o
   %{target})))

(subdir
 Todos.app
 (rule
  (alias default)
  (deps ../Info.plist ../Entitlements.plist ../ios_app.exe)
  (targets Info.plist Todos)
  (enabled_if
   (or
    (= %{context_name} device.ios)
    (= %{context_name} simulator.ios)
    (= %{context_name} simulator-arm.ios)
    (= %{context_name} catalyst.ios)))
  (action
   (progn
    (copy ../Info.plist Info.plist)
    (copy ../ios_app.exe Todos)
    (run
     bash
     -c
     "case \"$1\" in\n  simulator.ios|simulator-arm.ios|catalyst.ios)\n    codesign --force --sign \"${CODESIGN_IDENTITY:--}\" --timestamp=none Todos\n    ;;\n  *)\n    codesign --force --sign \"${CODESIGN_IDENTITY:-20C6BAC6D27E2CC8D07385E763D2618774727C50}\" --entitlements ../Entitlements.plist --timestamp=none Todos\n    ;;\nesac"
     --
     %{context_name})))))
