(library
 (name todos_ocaml_core)
 (public_name todos_ocaml.core)
 (wrapped false)
 (modules todo_core todo_std)
 (libraries bonsai_native datascript_ocaml))

(library
 (name todos)
 (public_name todos_ocaml)
 (modules todo_runtime)
 (libraries
  bonsai_native
  datascript_ocaml.sqlite
  todos_ocaml.core
  threads.posix))

(library
 (name todos_ocaml_apple_ui)
 (public_name todos_ocaml.apple_ui)
 (wrapped false)
 (modules todo_ui)
 (libraries bonsai_native bonsai_apple todos_ocaml.core))
