(test
 (name test_todo_ui)
 (modules test_todo_ui)
 (libraries bonsai_apple core todos_ocaml.core todos_ocaml.apple_ui)
 (preprocess
  (pps ppx_jane bonsai.ppx_bonsai)))

(test
 (name test_todo_model)
 (modules test_todo_model)
 (libraries core todos_ocaml)
 (preprocess
  (pps ppx_jane bonsai.ppx_bonsai)))
